Revise ASCII guide structure and title
Updated the title and improved the structure of the guide with additional sections and formatting changes.

--- a/2026-02-02-guide-ascii.html
+++ b/2026-02-02-guide-ascii.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Guide ASCII — Bitcoin vu par Famas</title>
+<title>Guide : Maîtriser l’Écriture Texte Structuré en ASCII — Bitcoin vu par Famas</title>
 
 <style>
 body{
@@ -52,13 +52,19 @@ main{
   font-size:1.2rem;
 }
 
+h3{
+  color:#b6ffb6;
+  margin-top:28px;
+  font-size:1rem;
+}
+
 p{
   line-height:1.6;
   margin:14px 0;
 }
 
 ul, ol{
-  padding-left:18px;
+  padding-left:20px;
 }
 
 li{
@@ -80,13 +86,12 @@ li{
 }
 
 pre{
-  border:1px solid #355;
-  padding:14px;
-  margin:22px 0;
   background:#050805;
-  white-space:pre-wrap;
+  border:1px solid #355;
+  padding:12px;
   overflow-x:auto;
-  color:#cfe3d1;
+  white-space:pre-wrap;
+  color:#caffca;
 }
 
 /* META */
@@ -139,15 +144,21 @@ a:hover{
 <p>
 Dans un monde numérique saturé de formats complexes, l’ASCII reste un outil puissant
 pour créer des documents clairs, copiables, lisibles partout — même sur un terminal,
-un SMS ou un email brut.
+un SMS, ou un email brut.
+Ce guide vous apprend à structurer, hiérarchiser et mettre en valeur du texte sans
+dépendre d’outils graphiques.
 </p>
 
-<div class="block important">
-L’ASCII privilégie la clarté, la durabilité et la souveraineté du texte
-sur l’esthétique fragile des formats propriétaires.
-</div>
+<h3>🎯 Pourquoi ce guide ?</h3>
 
-<h3>1️⃣ Structurer son texte</h3>
+<p>
+L’ASCII permet une lisibilité maximale, une portabilité totale et une indépendance
+complète vis-à-vis des plateformes.
+</p>
+
+<h3>🧩 1. Structurer son texte comme un pro</h3>
+
+<p>➤ Titres et sous-titres</p>
 
 <pre>
 --> TITRE PRINCIPAL
@@ -155,7 +166,12 @@ sur l’esthétique fragile des formats propriétaires.
 => Sous-sous-titre
 </pre>
 
-<h3>2️⃣ Listes et hiérarchie</h3>
+<div class="block">
+Astuce : Les flèches -->, ==> et => sont universellement reconnues comme indicateurs
+de hiérarchie.
+</div>
+
+<p>➤ Listes et puces</p>
 
 <pre>
 - Liste simple
@@ -163,13 +179,15 @@ sur l’esthétique fragile des formats propriétaires.
 + Puce secondaire
 </pre>
 
+<p>➤ Numérotation</p>
+
 <pre>
 1. Étape 1
 2. Étape 2
    a) Sous-étape
 </pre>
 
-<h3>3️⃣ Séparateurs visuels</h3>
+<p>➤ Séparateurs visuels</p>
 
 <pre>
 -----------------------------------------
@@ -177,19 +195,33 @@ sur l’esthétique fragile des formats propriétaires.
 >>> Séparateur flèche
 </pre>
 
-<h3>4️⃣ Liens universels</h3>
+<h3>🔗 2. Gérer les liens et références</h3>
+
+<p>➤ Liens copiables</p>
 
 <pre>
 https://example.com
+</pre>
+
+<p>➤ Liens avec texte descriptif</p>
+
+<pre>
 Voir site officiel : https://example.com
 </pre>
 
+<p>➤ Multi-liens en clair</p>
+
+<pre>
+[PlanB Academy] https://planb.academy/fr/learn-anytime
+[Bitcoin.fr] https://bitcoin.fr/
+</pre>
+
 <div class="block">
-Les liens ASCII restent cliquables, copiables et fonctionnels
-sur tous les supports, sans dépendance logicielle.
+Fonctionne partout : cliquable dans les navigateurs, copiable dans les SMS,
+emails, ou notes.
 </div>
 
-<h3>5️⃣ Mise en évidence sans style graphique</h3>
+<h3>💡 3. Mettre en évidence sans gras ni couleurs</h3>
 
 <pre>
 * Important
@@ -199,21 +231,51 @@ sur tous les supports, sans dépendance logicielle.
 </pre>
 
 <pre>
+--> Point clé
+==> Sous-point
+=> Détail technique
+</pre>
+
+<pre>
 ATTENTION : NE PAS IGNORER CETTE ÉTAPE
 </pre>
 
-<h3>6️⃣ Cartes ASCII autonomes</h3>
+<h3>📊 4. Créer des tableaux simples</h3>
+
+<pre>
+Nom       | Fonction     | Lien
+---------|--------------|----------------
+Bitcoin   | Monnaie      | https://bitcoin.org
+PlanB     | Formation    | https://planb.academy
+</pre>
+
+<div class="block">
+Astuce : alignez les colonnes manuellement avec des espaces.
+Ne dépassez pas 80 caractères.
+</div>
+
+<h3>🗺️ 5. Cartes ASCII : des blocs autonomes</h3>
 
 <pre>
 -----------------------------------------
---> FICHE : BITCOIN POUR DÉBUTANTS
-- Monnaie décentralisée
-- Limite à 21M unités
-- https://bitcoin.org
+--> CARTE : QUEL EST LE PROBLÈME ?
+- Inflation
+- Perte épargne
+https://youtu.be/5dRHjDqL6q8
 -----------------------------------------
 </pre>
 
-<h3>7️⃣ Compatibilité HTML</h3>
+<p>
+Idéal pour des tutoriels, checklists, ou résumés rapides.
+</p>
+
+<h3>🎨 7. Couleurs ? Seulement via CSS (optionnel)</h3>
+
+<pre>
+&lt;pre style="color:#f7931a;"&gt;TEXTE ORANGE&lt;/pre&gt;
+</pre>
+
+<h3>📄 9. Coordination avec HTML</h3>
 
 <pre>
 &lt;pre style="white-space: pre-wrap; font-family: monospace;"&gt;
@@ -221,8 +283,32 @@ ATTENTION : NE PAS IGNORER CETTE ÉTAPE
 &lt;/pre&gt;
 </pre>
 
+<h3>🧭 En résumé : checklist ASCII</h3>
+
+<ul>
+  <li>Hiérarchiser avec -->, ==></li>
+  <li>Listes avec - * +</li>
+  <li>Mise en évidence avec * ! #</li>
+  <li>Tableaux avec |</li>
+  <li>Cartes autonomes</li>
+  <li>Copiable partout</li>
+</ul>
+
+<h3>📚 Pour aller plus loin</h3>
+
+<ul>
+  <li>Bitcoin.fr — actualités et tutoriels</li>
+  <li>PlanB Academy — formations gratuites</li>
+  <li>
+    GitHub Markdown Guide —
+    <a href="https://guides.github.com/features/mastering-markdown/" target="_blank">
+      https://guides.github.com/features/mastering-markdown/
+    </a>
+  </li>
+</ul>
+
 <div class="meta">
-Publié le 02 février 2026<br>
+Publié le 2 février 2026<br>
 Bitcoin vu par Famas
 </div>
 
