Update link in article section to new guide

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ h1{
 <div class="article">
   <div class="article-date">01 février 2026</div>
   <strong>
-    <a href="https://yakihonne.com/article/s/Franck@rizful.com/dbb3d9101458491f" target="_blank">
+    <a href="2026-02-02-guide-ascii.html" target="_blank">
       📘 Guide : Maîtriser l’Écriture Texte Structuré en ASCII
     </a>
   </strong>
