Update article dates and links in index.html

--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@ h1{
 
 <!-- 8 — Proton Wallet -->
 <div class="article">
-  <div class="article-date">01 février 2026</div>
+  <div class="article-date">02 février 2026</div>
   <strong>
-    <a href="https://yakihonne.com/article/s/Franck@rizful.com/49659c6859d6ae8e" target="_blank">
+    <a href="2026-02-02-proton-wallet.html" target="_blank">
       📄 PROTON WALLET — Guide d’utilisation
     </a>
   </strong>
@@ -162,7 +162,7 @@ h1{
   
 <!-- 7 — ASCII Guide -->
 <div class="article">
-  <div class="article-date">01 février 2026</div>
+  <div class="article-date">02 février 2026</div>
   <strong>
     <a href="2026-02-02-guide-ascii.html" target="_blank">
       📘 Guide : Maîtriser l’Écriture Texte Structuré en ASCII
