Add article on Bitcoin analysis
Added a new article about Bitcoin by Yorick de Mombynes.

--- a/index.html
+++ b/index.html
@@ -145,6 +145,18 @@ h1{
 <!-- ================= ARTICLES ================= -->
 <div class="section-title">Articles</div>
 
+<!-- Carte article courant -->
+<div class="card article">
+  <h3>02 février 2026</h3>
+  <h2>Comprendre Bitcoin — d’après Yorick de Mombynes</h2>
+  <p>
+    Analyse pédagogique et structurée de Bitcoin : infrastructure, monnaie,
+    sécurité, adoption mondiale, critiques et Lightning Network.
+    Un article de fond, fidèle à l’analyse de Yorick de Mombynes
+  </p>
+  <a href="2026-02-02-bitcoin-yorick-de-mombynes.html">Lire l’article →</a>
+</div>
+  
 <!-- 8 — Proton Wallet -->
 <div class="article">
   <div class="article-date">02 février 2026</div>
