Add footer navigation links to HTML file

--- a/2026-02-02-bitcoin-yorick-de-mombynes.html
+++ b/2026-02-02-bitcoin-yorick-de-mombynes.html
@@ -206,5 +206,9 @@ Mise à jour : février 2026
 </div>
 
 </div>
+  <footer>
+  <a href="#top">↑ Haut de page</a> ·
+  <a href="/index.html">Accueil</a>
+</footer>
 </body>
 </html>
