--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bitcoin vu par Famas</title>
+<title>𝔹𝕚𝕥𝕔𝕠𝕚𝕟 𝕧𝕦 𝕡𝕒𝕣 𝔽𝕒𝕞𝕒𝕤</title>
 
 <style>
 body{
