--- a/index.html
+++ b/index.html
@@ -147,6 +147,18 @@ h1{
 
 <!-- Carte article courant -->
 <div class="card article">
+	<h3>04 février 2026</h3>
+	<h2>PEACH BITCOIN — Guide d’utilisation</h2>
+	<p>
+		Plateforme P2P sans KYC : acheter et vendre du Bitcoin directement entre particuliers,
+		avec escrow Bitcoin, orderbook public et self-custody.
+		Idéal pour la confidentialité et la souveraineté.
+	</p>
+	<a href="2026-02-04-peach-bitcoin.html">Lire l’article →</a>
+</div>
+  
+<!-- Carte article courant -->
+<div class="card article">
   <h3>02 février 2026</h3>
   <h2>Comprendre Bitcoin — d’après Yorick de Mombynes</h2>
   <p>
