--- a/index.html
+++ b/index.html
@@ -145,6 +145,18 @@ h1{
 <!-- ================= ARTICLES ================= -->
 <div class="section-title">Articles</div>
 
+
+<!-- Carte article courant -->
+<div class="card article">
+    <h3>05 février 2026</h3>
+    <h2>BLITZ WALLET — Guide d’utilisation</h2>
+    <p>
+        Portefeuille Bitcoin en self-custody conçu pour l’usage quotidien :
+        paiements Lightning, envois en USD via stablecoins, cadeaux, contacts internes,
+        et mode terminal de paiement pour commerçants — sans sacrifier la souveraineté.
+    </p>
+    <a href="2026-02-05-blitz-wallet.html">Lire l’article →</a>
+</div>	
 <!-- Carte article courant -->
 <div class="card article">
 	<h3>04 février 2026</h3>
