--- a/index.html
+++ b/index.html
@@ -145,7 +145,19 @@ h1{
 <!-- ================= ARTICLES ================= -->
 <div class="section-title">Articles</div>
 
-
+<!-- Carte article courant -->
+<div class="card article">
+    <h3>05 février 2026</h3>
+    <h2>BULL BITCOIN — Wallet & Échangeur non-custodial</h2>
+    <p>
+        Guide complet Bull Bitcoin : portefeuille mobile non-custodial
+        (on-chain, Lightning, Liquid), et plateforme d’achat / vente
+        100 % non dépositaire avec envoi direct vers votre wallet.
+        Une porte d’entrée souveraine pour débutants et utilisateurs avancés.
+    </p>
+    <a href="2026-02-05-bull-bitcoin.html">Lire l’article →</a>
+</div>
+	
 <!-- Carte article courant -->
 <div class="card article">
     <h3>05 février 2026</h3>
