--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ h1{
 <div class="article-complet">
   <h2>🧠 Base de connaissances Bitcoin</h2>
   <p>
-    Synthèse complète des connaissances Bitcoin : analyses monétaires, bibliothèques, tutoriels et certifications.
+    Synthèse complète des connaissances Bitcoin : Ressources incontournables.
   </p>
   <a href="2026-02-01-base-connaissances.html">→ Accéder à la base de connaissances</a>
 </div>
