--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ h1{
     Sélection d’outils Bitcoin, privacy, éducation,
     wallets, réseaux décentralisés et dashboards.
   </p>
-  <a href="2026-02-01-boite-a-outils.html">→ Accéder à la boîte à outils</a>
+  <a href="https://yakihonne.com/article/s/franck@rizful.com/817f10e7fda2f837">→ Accéder à la boîte à outils</a>
 </div>
 
 <!-- 3 — Bibliothèque -->
