--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@ h1{
 
 <!-- Carte article courant -->
 <div class="card article">
+   <h3>13 février 2026</h3>
+   <h2>📦 BOÎTE À OUTILS — VERSION 4</h2>
+   <p>
+      Répertoire curaté de 92 outils pour Bitcoiners autonomes :
+      éducation, sécurité, wallets, boutiques, réseaux décentralisés, veille.
+      Tous les liens vérifiés — zéro dépendance, zéro tiers de confiance.
+   </p>
+   <a href="2026-02-13-outils-4.html">Lire l’article →</a>
+</div>
+	
+<!-- Carte article courant -->
+<div class="card article">
     <h3>05 février 2026</h3>
     <h2>BULL BITCOIN — Wallet & Échangeur non-custodial</h2>
     <p>
